--- a/styles/valorant.module.css
+++ b/styles/valorant.module.css
@@ -2,18 +2,24 @@
     width: 100%;
     height: 100%;
     display: block;
-    background-color: rgb(252, 68, 87);
-    padding: 16px;
+    background-color: rgb(252, 69, 88);
+    padding: 0px;
 }
 
 .text {
     font-size: 12em;
     font-weight: bold;
-    color: rgb(14, 24, 33);
+    color: rgb(23, 26, 38);
     font-family: sans-serif;
+    line-height: 1em;
 }
 
 .borderBox {
-    border: 1px #fff solid;
-    padding: 16px;
+    border: 16px rgb(236, 231, 225) solid;
+    padding: 32px;
+}
+
+.text_right {
+    text-align: right;
+    color: rgb(236, 231, 225);
 }
